# grpc-example-common

./: .gitignore  .pre-commit-config.yaml  example_plugin.py  gen_rpc.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
google/protobuf/: descriptor.proto.json  duration.proto.json  timestamp.proto.json
grpc_example_common/helper/: field.py
grpc_example_common/interceptor/client_interceptor/: customer_top.py
grpc_example_common/interceptor/server_interceptor/: base.py  customer_top.py
grpc_example_common/protos/book/: manager.proto.json  manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py  manager_pb2_grpc.pyi  social.proto.json  social_pb2.py  social_pb2.pyi  social_pb2_grpc.py  social_pb2_grpc.pyi
grpc_example_common/protos/common/: api_pb2.py  api_pb2.pyi  exce.proto.json  exce_pb2.py  exce_pb2.pyi  p2p_validate.proto.json  p2p_validate_pb2.py  p2p_validate_pb2.pyi
grpc_example_common/protos/user/: user.proto.json  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py  user_pb2_grpc.pyi
protos/common/: api.proto
protos/grpc_example_common/protos/common/: p2p_validate.proto
protos/grpc_example_common/protos/user/: user.proto
protos/user/: user.proto
